fixed navigation alignment

--- a/css/style.css
+++ b/css/style.css
@@ -35,16 +35,16 @@ h1 {
 #navBar ul {
     background-color: grey;
     border-bottom: 2px solid white;
-    margin: 0 auto;
     padding-top: 25px;
     padding-bottom: 25px;
+    text-align: center;
 }
 
 #navBar ul li {
     color: white;
     display: inline;
     font-size: 20px;
-    padding-right: 200px;
+    padding-right: 180px;
     padding-left: 200px;
     margin-left: 0;
     text-align: center;
